# via-angle-cpp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: c-cpp.yml
docs/: Doxyfile
docs/uml/: angle_class_diagram.puml  angle_dependancies.puml  angle_dependencies.puml
include/via/: angle.hpp  trig.hpp  two_sum.hpp
include/via/angle/: trig.hpp  two_sum.hpp
python/tests/: test_Angle.py
src/: via_angle_python_bindings.cpp
tests/: test_angle_double.cpp  test_main.cpp  test_trig_double.cpp  test_two_sum.cpp
